feat: validate that user is really owner of image/album
