# docs/swagger.json
@@ -368,7 +368,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/models.User"
+                            "$ref": "#/definitions/models.UserRegister"
                         }
                     }
                 ],
@@ -377,29 +377,6 @@
         }
     },
     "definitions": {
-        "models.Album": {
-            "type": "object",
-            "properties": {
-                "album_id": {
-                    "type": "integer"
-                },
-                "images": {
-                    "type": "array",
-                    "items": {
-                        "$ref": "#/definitions/models.Image"
-                    }
-                },
-                "name": {
-                    "type": "string"
-                },
-                "user": {
-                    "$ref": "#/definitions/models.User"
-                },
-                "user_id": {
-                    "type": "integer"
-                }
-            }
-        },
         "models.AlbumRegister": {
             "type": "object",
             "properties": {
@@ -408,44 +385,9 @@
                 }
             }
         },
-        "models.Image": {
+        "models.UserLogin": {
             "type": "object",
             "properties": {
-                "description": {
-                    "type": "string"
-                },
-                "id": {
-                    "type": "integer"
-                },
-                "url": {
-                    "type": "string"
-                },
-                "user_id": {
-                    "type": "integer"
-                }
-            }
-        },
-        "models.User": {
-            "type": "object",
-            "properties": {
-                "albumss": {
-                    "type": "array",
-                    "items": {
-                        "$ref": "#/definitions/models.Album"
-                    }
-                },
-                "email": {
-                    "type": "string"
-                },
-                "id": {
-                    "type": "integer"
-                },
-                "images": {
-                    "type": "array",
-                    "items": {
-                        "$ref": "#/definitions/models.Image"
-                    }
-                },
                 "password": {
                     "type": "string"
                 },
@@ -454,9 +396,12 @@
                 }
             }
         },
-        "models.UserLogin": {
+        "models.UserRegister": {
             "type": "object",
             "properties": {
+                "email": {
+                    "type": "string"
+                },
                 "password": {
                     "type": "string"
                 },
